--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth0/nextjs-auth0": "^2.2.2",
     "@heroicons/react": "^2.0.16",
     "@prisma/client": "^4.11.0",
+    "@sendgrid/mail": "^7.7.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "email-validator": "^2.0.4",
@@ -20,7 +21,6 @@
     "immutability-helper": "^3.1.1",
     "moment": "^2.29.4",
     "next": "13.2.3",
-    "nodemailer": "^6.9.1",
     "rc-time-picker": "^3.7.3",
     "react": "18.2.0",
     "react-dnd": "^16.0.1",
